# OpenCompiler

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  install_mac.sh  pyproject.toml  requirements.txt  setup.py
aicompiler/: __init__.py
aicompiler/compiler/: __init__.py  codegen.py  core.py
aicompiler/integrations/: __init__.py  jax_frontend.py  onnx_frontend.py  pytorch_frontend.py  tensorflow_frontend.py
aicompiler/optimizations/: graph_optimizer.py
aicompiler/runtime/: __init__.py  executor.py  jit_executor.py  resource_manager.py  scheduler.py
aicompiler/src/optimizations/: arm_vectorizer.cpp
aicompiler/tests/: test_apple_silicon.py  test_end_to_end.py
docs/: index.md
docs/apple_silicon/: apple_silicon_optimizations.md
docs/assets/images/: ascii_logo.txt  logo_spec.txt
docs/tutorials/: installation.md  quickstart.md
examples/: pytorch_example.py  simple_example.py
